<resources>
    <string name="app_name">Amaaze</string>
    <string name="create_button_text">Create New Game</string>
    <string name="view_button_text">View Saved Games</string>
    <string name="action_settings">Settings</string>
    <string name="action_sign_out">Sign Out</string>
    <string name="activity_camera_capture_name">Camera Capture Activity</string>
    <string name="set_button_text">Set!</string>
    <string name="maze_loader_text">Preparing your maze…</string>
    <string name="view_maze_title">Mazes</string>
    <string name="title_private_tab">My Creations</string>
    <string name="title_public_tab">Public</string>
    <string name="maze_title_hint">Maze Title</string>
    <string name="wormhole_text">Number of Wormholes</string>
    <string name="mazify_activity_title">Create Your Maze</string>
    <string name="save_button_cd">Save Button</string>
    <string name="save_button_text">Save</string>
    <string name="play_button_text">Play</string>
    <string name="proceed_button_text">Next</string>
    <string name="maze_title">Maze Title</string>
    <string name="set_start_point">Set Start Point!</string>
    <string name="set_end_point">Set End Point!</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="timing_description">Great job! Your timing was:</string>
    <string name="timing_content">00:00:00</string>
    <string name="highscores">Highscores</string>
    <string name="maze_description">A short description of your maze...</string>
    <string name="loading_generating_paths">Generating paths...</string>
    <string name="loading_initialise_pathfinding">Initialising pathfinding grid...</string>
    <string name="retrieving_maze">Retrieving maze...</string>
    <string name="maze_running_text">Running algorithm...</string>
    <string name="path_not_found">Not solvable without wormholes!</string>
    <string name="path_found">Solvable without wormholes!</string>
</resources>
